resindvd: fix wedge in preroll when playbin2 deinterlacing is enabled

When deinterlacing is enabled, an extra colorspace element is added.
Colorspace is a basetransform, and is then the only basetransform
element on the video path. A while ago, basetransform started delaying
events till caps were set on its source pad. These things conspired
to end up sending the DVD highlight events onto a blocked pad on
subtitleoverlay.

Ensuring these highlight events are only sent once we're in playing
mode fixes the issue.

https://bugzilla.gnome.org/show_bug.cgi?id=668762